add_executable(stanza median_two_sorted_arrays.cpp dfs_tree_sum.cpp ../binary_search/yellow.ai.cpp)
add_executable(dfstree dfs_tree_sum.cpp ../tree_graphs/reconstruct_itinery.cpp)
add_executable(testyelloew ../binary_search/yellow.ai.cpp)
add_executable(wt water_tapping.cpp)
add_executable(lrc largest_rectangle.cpp)