cmake_minimum_required(VERSION 3.21)
project(dp_tree)

set(CMAKE_CXX_STANDARD 14)
add_executable(sub1 kartik_sub.cpp collect_apples.cpp)
add_executable(sub2 subordinates.cpp)
add_executable(t3 time_inform.cpp)
add_executable(ac collect_apples.cpp)
#add_executable(d1 diameter.cpp ../dp /odd_even_sum.cpp)