add_executable(add_list link_list.cpp ../array/tree_node_remove.cpp ../tree_graphs/bst_list.cpp ../tree_graphs/TreeFactory.h ../tree_graphs/TreeSuccessor.h)
#add_executable(add list.cpp ../task_scheduling.cpp ../tree_graphs/word_lader.cpp)
add_executable(odd_even odd_even.cpp createList.h)
add_executable(sort sort_list.cpp)
add_executable(swap swap.cpp)